--- a/style.css
+++ b/style.css
@@ -98,12 +98,6 @@ body {
   font-family: 'Stencil 2';
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   text-align: center;
-}
-
-#ip1,
-#ip2,
-#ip3,
-#ip4 {
   color: yellow;
   letter-spacing: 1em;
   font-size: 2.5em;
@@ -124,20 +118,13 @@ body {
   margin: 0;
 }
 
-/* @media (max-width: 775px) {
-      .aufruf {
-        grid-template-columns: repeat(1,1fr);
-      }
-    } */
-
 .aufruf {
-  /* display: grid; */
   margin-left: 2.5em;
-  /* grid-template-columns: repeat(1,1fr); */
   width: 55%;
-  border: #000;
-  border-style: outset;
-  backdrop-filter: blur(2.5px);
+  border-radius: 20px;
+  border: 3px solid rgb(220, 220, 220);
+  background: rgba(220, 220, 220, 0.5);
+  backdrop-filter: blur(5px) brightness(90%);
 }
 
 .regular-text,
@@ -159,8 +146,6 @@ body {
 
 .regular-text {
   color: #000;
-  width: 100%;
-  /* margin-left: 5em; */
 }
 
 .stylized-text {
@@ -171,14 +156,5 @@ body {
   float: right;
   position: fixed;
   margin-left: 60%;
-}
-
-#aufruf-unicorn {
   width: 15%;
 }
-
-#demo-rat {
-  width: 15%;
-}
-
-/* #aufruf-unicorn-div {
