--- a/style.css
+++ b/style.css
@@ -66,29 +66,7 @@ body {
   }
 }
 
-#cat {
-  color: black;
-  width: 18em;
-  -webkit-filter: grayscale(75%);
-  -moz-filter: grayscale(75%);
-  -o-filter: grayscale(75%);
-  -ms-filter: grayscale(75%);
-  filter: grayscale(75%);
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-
-#unicorn {
-  color: black;
-  width: 18em;
-}
-
-#capybara {
-  color: black;
-  width: 18em;
-}
-
-#rat {
+.front-page-animal {
   color: black;
   width: 18em;
 }
